# workbench

./: .env.template  .gitignore  Makefile  README.md  models.template.toml  models_remote.toml  package-lock.json  package.json  pyproject.toml  start_web.sh  test.py
.cursor/rules/: tensor-typing.mdc
.github/workflows/: docs.yml  modal.yml
aws/: cdk.context.json  dev.py  ecs_stack.py
backend/: .gitignore  README.md  execute_debug.py  pyproject.toml  requirements.txt  scratch.py  start.sh
backend/app/: __init__.py  app.py  config.toml  local.py  local_config.toml  main.py  ndif_config.toml  ndif_remote_config.toml  remote.py  schema.py  state.py  utils.py
backend/app/api/: __init__.py  lens.py  models.py  patch.py  tokenize.py
backend/app/schema/: base.py  config.py  lens.py  models.py  patch.py
backend/aws/: Makefile  app.py  dev.py  schema.py  stack.py
backend/docker/: Makefile  dockerfile.base  dockerfile.conda  dockerfile.service  dockerfile.uv  environment.yml  requirements.txt  start.sh
cli/: main.py
docker/: dockerfile.base  dockerfile.service  dockerfile.uv
docs/: mkdocs.yml
docs/site/: 404.html  index.html
docs/site/search/: search_index.json
docs/src/: index.md  quickstart.md
docs/src/development/: tests.md
interface/: .env.template  .gitignore  .prettierrc  next.config.js  package.json
interface/src/app/: globals.css  layout.tsx  page.tsx
interface/src/components/: ActivationPatching.tsx  ChartSelector.tsx  ChatHistory.tsx  ComponentDropdown.tsx  ConversationBuilder.tsx  Layout.tsx  LogitLens.tsx  ModelSelector.tsx  Playground.tsx  PromptBuilder.tsx  SinglePromptBuilder.tsx  StatusUpdatesDisplay.tsx  TerminalStatus.tsx  TokenCounter.tsx  TourDialog.tsx  TutorialsToggle.tsx  Workbench.tsx  WorkbenchMenu.tsx  WorkbenchMode.tsx  WorkbenchStatus.tsx  WorkspaceHistory.tsx
modal/: gpu_image.py  image.py
personal/caden/: scratch.py
scripts/: api.sh  docker.sh  modal.sh  test-db.sh  test_db.py  web.sh
workbench/_api/: README.md  __init__.py  auth.py  backend.py  config.py  data_models.py  jobs.py  main.py  ns_utils.py  setup.py  state.py  telemetry.py  utils.py
workbench/_web/: .gitignore  drizzle.config.ts  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
(+436 files in other folders)
