[project]
name = "interp-workbench"
version = "0.1.0"
description = "Interpretability workbench"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.6",
    "python-dotenv>=1.0.1",
    "nnsight>=0.4.7",
    # Required for .uv_sync on Modal image
    "modal>=0.65.66",
]

[project.optional-dependencies]
local = [
    "uvicorn>=0.33.0",
]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
    "uvicorn>=0.33.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["workbench"]
